--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,6 @@ docker-build:
     - docker context create $CI_JOB_ID
     - docker buildx create $CI_JOB_ID --name multiarch --driver docker-container --use
     - docker buildx inspect --bootstrap
-    - docker buildx build --push --platform linux/arm64/v8,linux/arm/v7,linux/amd64,linux/386 --tag $CI_REGISTRY_IMAGE .
+    - docker buildx build --push --platform linux/amd64,linux/arm64/v8,linux/ppc64le,linux/s390x,linux/386,linux/arm/v7,linux/arm/v6 --tag $CI_REGISTRY_IMAGE .
   only:
     - master
