--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ docker-build:
   stage: build
   variables:
     DOCKER_DRIVER: overlay2
+    PLATFORMS: linux/amd64,linux/arm64/v8,linux/arm/v7,linux/arm/v6
   services:
     - docker:dind
   before_script:
@@ -12,6 +13,6 @@ docker-build:
     - docker context create $CI_JOB_ID
     - docker buildx create $CI_JOB_ID --name multiarch --driver docker-container --use
     - docker buildx inspect --bootstrap
-    - docker buildx build --push --platform linux/amd64,linux/arm64/v8,linux/arm/v7,linux/arm/v6 --tag $CI_REGISTRY_IMAGE .
+    - docker buildx build --push --platform $PLATFORMS --tag $CI_REGISTRY_IMAGE .
   only:
     - master
