--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -23,7 +23,7 @@ env:
 
 jobs:
   docker:
-    runs-on: [self-hosted, linux, X64]
+    runs-on: [self-hosted, linux]
     permissions:
       contents: read
       packages: write
@@ -43,13 +43,19 @@ jobs:
         with:
           cosign-release: 'v2.2.0'
 
-      # Added as suggestion to fix https://github.com/docker/buildx/issues/499#issuecomment-763920971
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+      - name: Set up SSH for Buildx
+        uses: webfactory/ssh-agent@v0.7.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      # Workaround: https://github.com/docker/build-push-action/issues/461
-      - name: Setup Docker buildx
-        uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        with:
+          driver: remote
+          endpoint: unix:///var/run/docker.sock
+          append: |
+            - endpoint: ssh://root@192.168.178.92
+              platforms: linux/amd64
 
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
