Remove linux label

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -23,7 +23,7 @@ env:
 
 jobs:
   docker:
-    runs-on: [self-hosted, linux]
+    runs-on: [self-hosted]
     permissions:
       contents: read
       packages: write
