Try to use different driver

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
         with:
-          driver: remote
+          driver: docker-container
           endpoint: unix:///var/run/docker.sock
           append: |
             - endpoint: ssh://root@192.168.178.92
